fixed height scrollbar in mainContainer + fixed list hover in dashboard popup

--- a/client/src/scss/components/_card.scss
+++ b/client/src/scss/components/_card.scss
@@ -105,6 +105,9 @@
                 font-size: 0.8em;
                 color: $color-red;
               }
+              .list{
+                color:$color-dark-white;
+              }
             }
           }
         }
