--- a/client/src/scss/components/dashboard/_dashboardGrid.scss
+++ b/client/src/scss/components/dashboard/_dashboardGrid.scss
@@ -6,7 +6,7 @@
     grid-template-columns: 325px auto;
     grid-template-rows: 100vh;
     grid-template-areas: "sideBar dashboard";
-    padding-top: 56px;
+    padding-top: 58px;
     height: 100vh;
 
     .dashboardGrid {
